# sredi-svoih-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.json  babel.config.js  package-lock.json  package.json  sredi-svoih.html
apps/api/: .env.example  .gitignore  Dockerfile.local  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260706135613_core_schema.py  20260706152217_auth_model.py  20260709120000_community_event_locations.py  20260709173041_seating_schema.py  20260709191017_import_schema.py  20260709210000_personal_surfaces_schema.py  20260709220000_privacy_requests_schema.py  20260713120000_avatar_storage.py
apps/api/app/: main.py
apps/api/app/api/: auth.py  avatar.py  community.py  events.py  health.py  me.py  prayer_tracker.py  privacy.py  registrations.py  router.py
apps/api/app/core/: authorization.py  config.py  errors.py  hashids.py  logging.py  passwords.py  rate_limits.py  redaction.py  request_context.py  security.py  supabase_jwt.py  tokens.py
apps/api/app/db/: base.py  session.py
apps/api/app/importer/: __init__.py  dedupe.py  parser.py  runner.py
apps/api/app/schemas/: admin_community.py  admin_events.py  admin_import.py  admin_invites.py  admin_members.py  admin_registrations.py  admin_seating.py  auth.py  avatar.py  (+10 more)
apps/api/docs/: synthetic-data.md
apps/api/scripts/: ignore_exact_import_duplicates.py  seed_synthetic.py
apps/api/tests/: test_admin_event_occurrences.py  test_admin_feedback.py  test_admin_import.py  test_current_user_profile.py  test_push_notifications.py
(+529 files in other folders)
