[project]
name = "sredi-svoih-api"
version = "0.1.0"
description = "Local FastAPI backend contour for Sredi Svoih."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "argon2-cffi>=23.1,<26.0",
  "asyncpg>=0.29,<1.0",
  "boto3>=1.34,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "PyJWT>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "pytest>=8.0,<9.0",
  "python-dotenv>=1.0,<2.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
